fixed wordwrap on Firefox

--- a/src/app/components/Sidebars/ArticleDetailsSidebar/ArticleDetailsSidebar.scss
+++ b/src/app/components/Sidebars/ArticleDetailsSidebar/ArticleDetailsSidebar.scss
@@ -34,6 +34,8 @@
 
       &-text {
         font-size: 14px;
+        white-space: nowrap;
+        padding-right: 2px;
       }
 
       &-modal {
